# boothitemmanager

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  aliases.yml  build.py  config.yaml  pyproject.toml  requirements.txt
.claude/agents/: boothlist-code-writer.md
.github/workflows/: gh-pages.yml  pages.yml
docs/: aliases.md  boothid.md  design.md  id.md  input.md  new.md  pximg.md  requirements.md  tasks.md
scripts/: generate_inner_docs.py
src/boothlist/: __init__.py  chrome_history.py  export.py  extract_ids.py  input_loader.py  main.py  normalize.py  scrape.py
src/boothlist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
